load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "module.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/temporalworker",
    visibility = ["//visibility:public"],
    deps = [
        "//go/cadence-starlark/ext/cadence:go_default_library",
        "//go/temporalworker/activities:go_default_library",
        "//go/temporalworker/starlark:go_default_library",
        "//proto/api/v2:go_default_library",
        "@io_temporal_go_sdk//client:go_default_library",
        "@io_temporal_go_sdk//worker:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_yarpc//:go_default_library",
        "@org_uber_go_yarpc//transport/grpc:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
