load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "module.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/worker",
    visibility = ["//visibility:public"],
    deps = [
        "//go/base/blobstore:go_default_library",
        "//go/base/blobstore/minio:go_default_library",
        "//go/worker/activities:go_default_library",
        "//go/worker/activities/http:go_default_library",
        "//go/worker/activities/rayhttp:go_default_library",
        "//go/worker/plugins/rayhttp:go_default_library",
        "//go/worker/ray:go_default_library",
        "//go/worker/activities/sparkhttp:go_default_library",
        "//go/worker/plugins/sparkhttp:go_default_library",
        "//go/worker/spark:go_default_library",
        "//go/worker/starlark:go_default_library",
        "//go/worker/workflowfx:go_default_library",
        "//go/worker/workflows:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_cadence_workflow_starlark_worker//plugin:go_default_library",
        "@com_github_cadence_workflow_starlark_worker//service:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_yarpc//:go_default_library",
        "@org_uber_go_yarpc//api/transport:go_default_library",
        "@org_uber_go_yarpc//transport/grpc:go_default_library",
        "@org_uber_go_yarpc//transport/http:go_default_library",
    ],
)
