load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "module.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/worker",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cadence_workflow_starlark_worker//plugin:go_default_library",
        "@com_github_cadence_workflow_starlark_worker//service:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_yarpc//:go_default_library",
        "@org_uber_go_yarpc//api/transport:go_default_library",
        "@org_uber_go_yarpc//peer:go_default_library",
        "@org_uber_go_yarpc//peer/hostport:go_default_library",
        "@org_uber_go_yarpc//transport/grpc:go_default_library",
    ],
)
