load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "conditions.pb.go",
        "list.pb.go",
        "options.pb.go",
        "typed_struct.pb.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/proto-go/api",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
    ],
)
