load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "apipb_proto",
    srcs = [
        "conditions.proto",
        "list.proto",
        "options.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)

go_proto_library(
    name = "apipb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogoslick_proto"],
    importpath = "github.com/michelangelo-ai/michelangelo/proto/api",
    proto = ":apipb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":api_go_proto"],
    importpath = "github.com/michelangelo-ai/michelangelo/proto/api",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "michelangelo_api_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogoslick_proto"],
    importpath = "github.com/michelangelo-ai/michelangelo/proto/api",
    proto = ":apipb_proto",
    visibility = ["//visibility:public"],
)
