load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gen-ext-register_lib",
    srcs = ["main.go"],
    importpath = "github.com/michelangelo-ai/michelangelo/tools/gen-ext-register",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gen-ext-register",
    embed = [":gen-ext-register_lib"],
    visibility = ["//visibility:public"],
)

