load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "blobstore.go",
        "module.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/base/blobstore",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "blobstore_test.go",
    ],
    embed = [":go_default_library"],
)
