load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "module.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/base/cadencefx",
    visibility = ["//visibility:public"],
    deps = [
        "//go/base/config:go_default_library",
        "@com_github_uber_go_tally//:go_default_library",
        "@org_uber_go_cadence//.gen/go/cadence/workflowserviceclient:go_default_library",
        "@org_uber_go_cadence//client:go_default_library",
        "@org_uber_go_cadence//worker:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_yarpc//:go_default_library",
        "@org_uber_go_yarpc//api/transport:go_default_library",
        "@org_uber_go_yarpc//transport/grpc:go_default_library",
        "@org_uber_go_yarpc//transport/tchannel:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
