load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "ingester_config.go",
        "load.go",
        "utils.go",
        "yaml.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/base/config",
    visibility = ["//visibility:public"],
    deps = [
        "//go/base/env:go_default_library",
        "//go/storage:go_default_library",
        "//go/storage/blobstorage:go_default_library",
        "//go/storage/mysql:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_test.go",
        "ingester_config_test.go",
        "yaml_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/base/env:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_config//:go_default_library",
    ],
)
