load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "logging.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/base/logging",
    visibility = ["//visibility:public"],
    deps = [
        "//go/base/env:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_go_logr_zapr//:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_test.go",
        "logging_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/base/env:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_fx//fxtest:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
